[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Game.gd" type="Script" id=1]
[ext_resource path="res://src/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/PlayerInfoPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/RoomInfoPanel.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 408.23
margin_top = 559.19
margin_right = 604.23
margin_bottom = 579.19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="APLabel" type="Label" parent="HBoxContainer"]
margin_top = 3.0
margin_right = 33.0
margin_bottom = 17.0
text = "AP: X"

[node name="CardBox" type="HBoxContainer" parent="."]
margin_top = 415.311
margin_right = 1024.0
margin_bottom = 455.311
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonsterSlot" type="Node2D" parent="."]
position = Vector2( 80.685, 85.3071 )

[node name="ItemSlot" type="Node2D" parent="."]
position = Vector2( 232.854, 83.8088 )

[node name="DoorSlot" type="Node2D" parent="."]
position = Vector2( 470.174, 83.8088 )

[node name="Door" parent="DoorSlot" instance=ExtResource( 2 )]

[node name="CardsDoneButton" type="Button" parent="."]
margin_left = 705.735
margin_top = 477.02
margin_right = 751.735
margin_bottom = 497.02
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsDoneButton" type="Button" parent="."]
margin_left = 705.735
margin_top = 538.756
margin_right = 751.735
margin_bottom = 558.756
disabled = true
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfoPanel" parent="." instance=ExtResource( 3 )]
margin_left = 591.927
margin_top = 4.7512
margin_right = 794.847
margin_bottom = 393.097

[node name="RoomInfoPanel" parent="." instance=ExtResource( 4 )]
margin_right = 568.0
margin_bottom = 28.0
[connection signal="pressed" from="CardsDoneButton" to="." method="_on_CardsDoneButton_pressed"]
[connection signal="pressed" from="ActionsDoneButton" to="." method="_on_ActionsDoneButton_pressed"]
